<resources>
    <string name="app_name">QuickStart</string>

    <string name="setting_userid">用户ID %1$s</string>
    <string name="loading">正在加载中&#8230;</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="no_more">-这是一条有态度的底线-</string>
    <string name="load_completed">加载完成</string>
    <string name="connect_your_wallet">连接账户，同步你的NFT或数字藏品</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="net_error_hint">网络错误，请检查网络连接</string>
    <string name="common_go_setting">去设置</string>
    <string name="common_camera">相机</string>
    <string name="common_storage">存储</string>
    <string name="common_correlation">相关</string>
    <string name="common_record_audio">录音</string>
    <string name="common_phone">电话</string>
    <string name="common_setting_permission_info">请在设置中开启%1$s权限，以正常使用 %2$s APP功能</string>
    <string name="main_top_title">SudMGP</string>
    <string name="main_top_url">www.sud.tech</string>
    <string name="select_game">选择游戏</string>
    <string name="audio_chat_hint">聊一聊~</string>
    <string name="audio_gameing">游戏中</string>
    <string name="close_game">关闭游戏</string>
    <string name="room_name">来一起玩游戏吧</string>
    <string name="enter">进入</string>
    <string name="room_number">房号</string>
    <string name="exit_room">退出房间</string>
    <string name="owned_nft">我的NFT</string>
    <string name="network">网络</string>
    <string name="unbind_wallet_title">确定要解除连接钱包吗？</string>
    <string name="nft_empty">尚无NFT</string>
    <string name="contract_address">Contract Address</string>
    <string name="token_id">Token ID</string>
    <string name="token_standard">Token Standard</string>
    <string name="copy">复制</string>
    <string name="wear">穿戴</string>
    <string name="cancel_wear">取消穿戴</string>
    <string name="mine">我的</string>
    <string name="connect_failed">连接失败</string>
    <string name="refuse_wallet_operate">你拒绝了钱包中的操作</string>
    <string name="dressed_in">穿戴中</string>
    <string name="copy_success">复制成功</string>
    <string name="sign_success">签名成功</string>
    <string name="waiting_sign">连接成功，等待签名…</string>
    <string name="wallet_connecting">钱包连接中…</string>
    <string name="overseas_wallet">海外钱包</string>
    <string name="internal_wallet">国内账户</string>
    <string name="bind_your_overseas_wallet">绑定你的海外钱包</string>
    <string name="bind_your_internal_wallet">绑定你的数字账户</string>
    <string name="bind_phone_title">%1$s账号授权</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="binded_info">已绑定：</string>
    <string name="auth_wallet_account">授权%1$s账号</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="auth_code_hint">请输入验证码</string>
    <string name="phone_number_hint">请输入手机号</string>
    <string name="bind_phone_info">未注册%1$s的手机号，授权后将自动注册</string>
    <string name="bind_phone_info_1">授权后应用将获取以下权限</string>
    <string name="bind_phone_info_2">基础信息</string>
    <string name="bind_phone_info_3">获得您的公开信息，以授权绑定第三方应用</string>
    <string name="bind_phone_info_4">数字藏品信息</string>
    <string name="bind_phone_info_5">获得您的数字藏品信息，以展示在第三方应用</string>
    <string name="confirm_auth">确认授权</string>
    <string name="agreement_prefix">授权即代表您同意</string>
    <string name="user_agreement_info">%1$s用户协议</string>
    <string name="privacy_policy_info">%1$s隐私政策</string>
    <string name="unbind_internal_wallet_title">解绑后，HelloSud将不再展示当前账号在“%1$s”上的藏品</string>
    <string name="address">地址</string>
    <string name="cn_token_id">令牌ID</string>
    <string name="change_account">切换账户</string>
    <string name="my_digital_collection">我的数字藏品</string>
    <string name="no_digital_collection">尚无数字藏品</string>
    <string name="auth_success">授权成功</string>
    <string name="nft_code_1019">NFT详情令牌过期</string>
    <string name="nft_code_1020">钱包类型不支持</string>
    <string name="nft_code_1021">发送验证码失败</string>
    <string name="nft_code_1022">绑定用户失败</string>
    <string name="nft_code_1023">藏品列表获取失败</string>
    <string name="nft_code_1024">藏品信息获取失败</string>
    <string name="nft_code_1025">藏品不属于用户</string>
    <string name="nft_code_1026">短信验证码发送太频繁</string>
    <string name="nft_code_1027">手机号已被绑定</string>
    <string name="nft_code_1028">该手机号已被其他用户绑定</string>
    <string name="nft_code_1029">用户解绑失败</string>
    <string name="nft_code_1030">验证码错误</string>
    <string name="nft_detail">NFT详情</string>
    <string name="description">Description</string>
    <string name="see_more">see more</string>
    <string name="see_less">see less</string>
    <string name="user_id_content">用户ID %1$s</string>
    <string name="spread">展开</string>
    <string name="unbind_overseas_wallet_title">解绑后，HelloSud将不再展示\n当前钱包地址上拥有的NFT</string>
    <string name="is_binding_wallet_address">已绑定的钱包地址</string>
    <string name="click_change_address">点击切换地址</string>
    <string name="click_change_network">点击切换网络</string>
    <string name="works_desc">作品描述</string>
    <string name="internal_nft_title">数字藏品详情</string>
    <string name="pack_up">收起</string>


</resources>