<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="178dp"
    android:background="@drawable/ic_wallet_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/connect_your_wallet"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_overseas"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/overseas_wallet"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/shape_round_stroke_1_ffffff"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_internal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/internal_wallet"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/shape_round_stroke_1_ffffff"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp" />

</LinearLayout>