<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <!-- 加载中 -->
    <LinearLayout
        android:id="@+id/load_more_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primary"
            android:layout_marginEnd="4dp" />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/loading"
            android:textSize="12sp"
            android:textColor="@color/c_aaaaaa" />
    </LinearLayout>

    <!-- 加载失败 -->
    <FrameLayout
        android:id="@+id/load_more_load_fail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="@color/primary"
            android:text="@string/load_failed" />

    </FrameLayout>

    <!-- 没有更多了 -->
    <FrameLayout
        android:id="@+id/load_more_load_end_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="@color/c_aaaaaa"
            android:text="@string/no_more" />

    </FrameLayout>

    <!-- 加载完成 -->
    <FrameLayout
        android:id="@+id/load_more_load_complete_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="@color/c_aaaaaa"
            android:text="@string/load_completed" />

    </FrameLayout>

</FrameLayout>
